# FreeIrc

./: .gitignore  .travis.yml  Makefile  Session.vim  cibuild.sh  default.nix  package.yaml  shell.nix  stack.yaml  wtfboths.cabal
config/: irc.yaml.default
src/: .Main.hs.swp  Chat.hs  Config.hs  Main.hs  Plugin.hs  Types.hs
src/Data/Acid/: Database.hs  Url.hs
src/Hooks/: Algebra.hs  AutoFree.hs  Chatter.hs  Eval.hs  PlusOne.hs  Title.hs  Weather.hs
src/Network/: IRC.hs
src/Network/IRC/: Design.hs  Runner.hs
