name:                wtfboths
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/wtfboths#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable wtfboths
  hs-source-dirs:      src
  other-modules:       Network.IRC.Runner
                     , Network.IRC
                     , Hooks.Algebra
                     , Hooks.Title
                     , Config
                     , Data.Acid.Url
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , network
                     , network-simple
                     , text
                     , bytestring
                     , stm
                     , wreq
                     , tagsoup
                     , lens
                     , mtl
                     , transformers
                     , free
                     , dyre
                     , lens
                     , case-insensitive
                     , time
                     , acid-state
                     , safecopy
                     , containers
